# extinct-species

./: .env  README.md  app.py  extinxt_search.ipynb  main.py  new.py  nigeria_extinction_final_clean.csv  nigeria_species_TEST.csv  nigeria_species_fast.csv  nigeria_species_fast1.csv  pyproject.toml  update.py
pages/: detail.py  search.py
